fix: header jumps when modal is opening/closing

--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -46,3 +46,13 @@ html.scroll-fixed body {
 .swiper-pagination-bullet-active {
   background: #363636 !important;
 }
+
+@media (min-width: 1024px) {
+  .scroll-class {
+    overflow-y: auto;
+  }
+
+  .scroll-class::-webkit-scrollbar {
+    background-color:transparent
+  }
+}
